# ctcdecode

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ctcdecode/: __init__.py
ctcdecode/src/: binding.cpp  binding.h  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  decoder_utils.cpp  decoder_utils.h  path_trie.cpp  path_trie.h
tests/: test_decode.py
